Fix gap between items in page rightbar when zoomed

--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ hr {
 }
 
 .rightbar {
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: min-content min-content;
 }
 
 /* --------------*/
